--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -21,3 +21,5 @@ spring.servlet.multipart.max-request-size=1000MB
 jwt.secret=odeyalo-key
 jwt.actionTime=1200
 jwt.refresh.actionTime=259000
+
+path.save-files-path=C:\\Users\\thepr_2iz2cnv\\IdeaProjects\\spotify\\src\\test\\music\\
