Added new properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,12 @@ jwt.actionTime=1200
 jwt.refresh.actionTime=259000
 
 path.save-files-path=C:\\Users\\thepr_2iz2cnv\\IdeaProjects\\spotify\\src\\main\\resources\\music\\
+path.save-image-files-path=C:\\Users\\thepr_2iz2cnv\\IdeaProjects\\spotify\\src\\main\\resources\\img\\avatars\\
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username={email}
+spring.mail.password={mypassword}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+mail.smtp.debug=true
